--- a/workshops/index.html
+++ b/workshops/index.html
@@ -80,7 +80,7 @@
 
    <a href="#cz2" class="animated_popup">
 
-        <h1>Copenhagen, Czech Denmark</h1>
+        <h1>Copenhagen, Denmark</h1>
 
       </a>
 
@@ -90,7 +90,7 @@
 
         <h3>Copenhagen, Denmark</h3>
 
-        <p>May 17 to 19, 2020</p>
+        <p>May 17 to 19, 2022</p>
 
         <p>Contact <a href="mailto:webmaster@knudtaichi.dk ">webmaster@knudtaichi.dk </a></p>
 
@@ -161,13 +161,24 @@
         <p>Contact Alex Dong for more information: <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com</a></p>
 
       </div>
+      
+<a href="#abcde" class="animated_popup">
+<h1>Olympia, Washington</h1>
+</a>
+<h2>July 8 to 10, 2022</h2>
+<div id="abcde" style="display:none" class="image-popup" class="book-details-popup">
+<h3>Olympia, Olympia</h3>
+<p>May 14 to 15, 2022</p>
+<p>Contact <a href="mailto:slowset@gmail.com">slowset@gmail.com</a></p>
+<p>Workshop content: Qigong, Forms and Weapons practice</p>
+</div>
 
 
 
 
  <a href="#cz5" class="animated_popup">
 
-        <h1>Copenhagen, Czech Denmark</h1>
+        <h1>Copenhagen, Denmark</h1>
 
       </a>
 
@@ -232,6 +243,8 @@
         <p>Contact <a href="mailto:lydiatilli@hotmail.com">lydiatilli@hotmail.com</a></p>
 
         <p>Workshop content: Fundamental Qigong, All Forms and Push Hands</p>
+        
+        <p><a href="https://www.taichi.gr/en/front-page-events/international-tai-chi-chuan-intensive-with-master-alex-dong-21-15-september-2022/">https://www.taichi.gr/en/front-page-events/international-tai-chi-chuan-intensive-with-master-alex-dong-21-15-september-2022/</a>
 
       </div>
 
