--- a/workshops/index.html
+++ b/workshops/index.html
@@ -36,7 +36,7 @@
       
          <a href="#westwater" class="animated_popup">
 
-        <h1>Westwater, UT</h1>
+        <h1>Westwater, UT.</h1>
 
       </a>
 
