add missing div container

--- a/workshops/index.html
+++ b/workshops/index.html
@@ -32,6 +32,7 @@
   </div>
 
   <section class="history workshops link-container">
+    <div class="history-container">
       
       <a href="#honolulu" class="animated_popup">
         <h1>Honolulu, HI</h1>
@@ -175,6 +176,7 @@
         <p>Contact <a href="mailto:lydiatilli@hotmail.com">lydiatilli@hotmail.com</a></p>
         <p>Workshop content: Fundamental Qigong, All Forms and Push Hands</p>
       </div>
+    </div>
   </section>
 
   <footer>
