--- a/workshops/index.html
+++ b/workshops/index.html
@@ -122,11 +122,11 @@
         <p>Workshop content: Fundamental Qigong, Forms and Push Hands</p>
       </div>
 
-      <a href="#cz3" class="animated_popup">
+      <a href="#cz11" class="animated_popup">
         <h1>Zagreb, Croatia</h1>
       </a>
       <h2>June 2 to 4, 2023</h2>
-      <div id="cz3" style="display:none" class="image-popup" class="book-details-popup">
+      <div id="cz11" style="display:none" class="image-popup" class="book-details-popup">
         <h3>Zagreb, Croatia</h3>
         <p>June 2 to 4, 2023</p>
         <p>Contact <a href="mailto:martina.mestr@gmail.com">martina.mestr@gmail.com</a></p>
@@ -145,14 +145,18 @@
       </div>
 
       <a href="#abcde" class="animated_popup">
-      <h1>Olympia, Washington</h1>
+        <h1>Olympia, Washington</h1>
       </a>
       <h2>July 14 to 16, 2023</h2>
       <div id="abcde" style="display:none" class="image-popup" class="book-details-popup">
-      <h3>Olympia, Olympia</h3>
-      <p>July 14 to 16, 2023</p>
-      <p>Contact <a href="mailto:TaijiTerry@outlook.com">TaijiTerry@outlook.com</a></p>
-      <p>Workshop content: Qigong, Forms and Weapons practice</p>
+        <h3>Olympia, Washington</h3>
+        <p>July 14 to 16, 2023</p>
+        <p>Contact <a href="mailto:dmh1224@gmail.com">dmh1224@gmail.com</a></p>
+        <p>Workshop content: Qigong, Forms and Weapons practice</p>
+        <p>$50 per class--$45 pre-register</p>
+        <p>$235 for all five classes--$220 pre-register</p>
+        <p>Pre-register by June 30 2023 with a minimum of 50% deposit. </p>
+        <p>Contact <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com</a> for payment details</p>
       </div>
 
       <a href="#upstate" class="animated_popup">
