add more workshops

--- a/workshops/index.html
+++ b/workshops/index.html
@@ -103,10 +103,10 @@
       <a href="#cz2" class="animated_popup">
         <h1>Copenhagen, Denmark</h1>
       </a>
-      <h2>May 19 to 21, 2023</h2>
+      <h2>June 5 to 7, 2023</h2>
       <div id="cz2" style="display:none" class="image-popup" class="book-details-popup">
         <h3>Copenhagen, Denmark</h3>
-        <p>May 19 to 21, 2023</p>
+        <p>June 5 to 7, 2023</p>
         <p>Contact <a href="mailto:webmaster@knudtaichi.dk ">webmaster@knudtaichi.dk </a></p>
         <p>Workshop content: Fundamental Qigong, Simplified, Advanced Forms and Energy work</p>
       </div>
@@ -173,11 +173,22 @@
       <a href="#cz7" class="animated_popup">
         <h1>Athens, Greece</h1>
       </a>
-      <h2>Nov. 9 to 12, 2023</h2>
+      <h2>Nov. 2 to 5, 2023</h2>
       <div id="cz7" style="display:none" class="image-popup" class="book-details-popup">
         <h3>Athens, Greece</h3>
-        <p>Nov. 9 to 12, 2023</p>
+        <p>Nov. 2 to 5, 2023</p>
         <p>Contact <a href="mailto:lydiatilli@hotmail.com">lydiatilli@hotmail.com</a></p>
+        <p>Workshop content: Fundamental Qigong, All Forms and Push Hands</p>
+      </div>
+      
+      <a href="#france2023" class="animated_popup">
+        <h1>Grenoble, France</h1>
+      </a>
+      <h2>Nov. 10 to 12, 2023</h2>
+      <div id="france2023" style="display:none" class="image-popup" class="book-details-popup">
+        <h3>Grenoble, France</h3>
+        <p>Nov. 10 to 12, 2023</p>
+        <p>Contact <a href="mailto:ewitrant@gmail.com">ewitrant@gmail.com</a></p>
         <p>Workshop content: Fundamental Qigong, All Forms and Push Hands</p>
       </div>
     </div>
