remove blue book

--- a/store/index.html
+++ b/store/index.html
@@ -100,11 +100,11 @@
           <h3>Taichi Explained</h3>
           <p>This book includes many fundamentals on the body, mind and energies. Pictures (color) and instructions of every move in the slow form. There is also a section call the "Often Misunderstood", "Understand in Depth" and a chapter just on Push Hands training and strategies. A must have for new students who just learning or those who wants to improve their Slow Form. Great for the more advanced students to learn more about Push Hands and understand more depth.</p>
         </div>
-        <h6><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+        <!-- <h6><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
         <input type="hidden" name="cmd" value="_s-xclick">
         <input type="hidden" name="hosted_button_id" value="ZKSZ8SWJVKSC8">
         <input type="submit" value="Purchase" class="paypal-link" border="0" name="submit">
-        </form></h6>
+        </form></h6> -->
       </div>
 
     </div>
