add new classes to nyc

--- a/classes/index.html
+++ b/classes/index.html
@@ -33,7 +33,7 @@
 
   <section class="history lineage">
     <div class="history-container">
-  <p>Master Alex Dong teaches classes in New York City. Registered instructors in the 
+  <p>Master New York City and the greater Northeast. Registered instructors in the 
     Association teach at centers around the world.</p>
     </div>
   </section>
@@ -43,7 +43,7 @@
     <div class="america-container">
       <h2>United States</h2>
       <ul class="classes-ul">
-        <li><a href="newyorkcity/">New York City</a></li>
+        <li><a href="newyorkcity/">New York City and the greater Northeast</a></li>
         <li><a href="carmel/">Carmel, California</a></li>
         <li><a href="coloradoutah/">Colorado And Utah Borders</a></li>
         <li><a href="oahu/">Honolulu, Hawaii</a></li>
