--- a/classes/index.html
+++ b/classes/index.html
@@ -52,17 +52,13 @@
         <li><a href="windham/">Windham, New Hampshire</a></li>
         <li><a href="olympia/">Olympia, Washington</a></li>
         <li><a href="yelm/">Yelm, Washington</a></li>
+        <li><a href="china/">Santa Barbara, California</a></li>
       </ul>
       
       <h2>Canada</h2>
       <ul class="classes-ul">
         <li><a href="newbrunswick">New Brunswick</a></li>
         <li><a href="quebec">Quebec</a></li>
-      </ul>
-      
-      <h2>China</h2>
-      <ul class="classes-ul">
-        <li><a href="china">Beijing</a></li>
       </ul>
 
       <h2 class="rest-of-the-world">Europe and South America</h1>
