--- a/classes/china/index.html
+++ b/classes/china/index.html
@@ -27,7 +27,7 @@
   </header>
 
   <div class="header-background">
-    <h1>Beijing, China</h1>
+    <h1>Santa Barbara, California</h1>
   </div>
 
   <section class="history-classes">
@@ -40,19 +40,27 @@
         </div>
       
       <p>
-      Beijing Tai Chi with Toni DeMoulin, 45 years teaching experience
+      Santa Barbara Tai Chi with Toni DeMoulin. Toni has been studying and teaching since 1972 .</p>
 
       <h2>Instruction</h2>
       <p>
-      Traditional Yang taijiquan long form, Qi Gong, Hao and Dong (Tung) style taijiquan, Dong DaDe Simplified Taijiquan, weapons, applications, conflict resolution & Push Hands 
+      traditional Yang taijiquan long form, Qi Gong, Hao & Dong (Tung) style taijiquan, weapons, applications, conflict resolution & Push Hands 
       </p>
       <h2>Schedule</h2>
       <p>
-        Fengtai District, Beijing<br/>
-        Sundays 9:30-11:00<br/>
-        Monday, Tuesday, Thursday 9:10-10:00
+        Outdoor Morning Classes<br/>
+        203 Hitchcock Way #102, Santa Barbara 93105 10:00-11:00 AM<br/>
+        Tuesday, Thursday, Saturday, Sunday.
       </p>
-      
+
+      <p>
+        Indoors Evening Classes inside<br/>
+        Community Arts Workshop<br/>
+        631 Garden Street, Santa Barbara 93101<br/>
+        6:00-7:00 PM<br/>
+        Mondays & Wednesdays.<br/>
+      </p>
+
       <h2>Location</h2>
        <p>
        Beijing, China. Email or WeChat for address.<br/>
@@ -60,8 +68,7 @@
       <h2>Contact</h2> 
         <p>
         Toni DeMoulin<br/>
-        Phone: +86 881-0118652<br/>
-        WeChat name-Toni DeMoulin 董妮 WeChat ID-Tonidemoulin <br/>
+        805-570-6194<br/>
         Email: <a href="mailto:taichitoni1@hotmail.com">taichitoni1@hotmail.com</a><br/>
       </p>
     </div>
