--- a/workshops/index.html
+++ b/workshops/index.html
@@ -34,77 +34,181 @@
   <section class="history workshops link-container">
     <div class="history-container">
 
-      <a href="#abcde" class="animated_popup">
-        <h1>Olympia, Washington</h1>
+<a href="#cz4" class="animated_popup">
+
+        <h1>Siena, Italy</h1>
+
       </a>
-      <h2>July 14 to 16, 2023</h2>
-      <div id="abcde" style="display:none" class="image-popup" class="book-details-popup">
-        <h3>Olympia, Washington</h3>
-        <p>July 14 to 16, 2023</p>
-        <p>Contact <a href="mailto:dmh1224@gmail.com">dmh1224@gmail.com</a></p>
-        <p>Workshop content: Qigong, Forms and Weapons practice</p>
-        <p>$50 per class--$45 pre-register</p>
-        <p>$235 for all five classes--$220 pre-register</p>
-        <p>Pre-register by June 30 2023 with a minimum of 50% deposit. </p>
-        <p>Contact <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com</a> for payment details</p>
+
+      <h2>May 18 to 21, 2024</h2>
+
+      <div id="cz4" style="display:none" class="image-popup" class="book-details-popup">
+
+        <h3>Siena, Italy</h3>
+
+        <p>May 18 to 21, 2024</p>
+
+        <p>Contact <a href="mailto:claudio.dongtaichi@gmail.com">claudio.dongtaichi@gmail.com</a></p>
+
+        <p>Workshop content: Fundamental Qigong, Forms, Energy and Push Hands</p>
+
       </div>
 
-      <a href="#upstate" class="animated_popup">
-        <h1>Upstate New York</h1>
+
+ <a href="#cz" class="animated_popup">
+
+        <h1>London, United Kingdom</h1>
+
       </a>
-      <h2>Oct. 6th to 9th 2023</h2>
-      <div id="upstate" style="display:none" class="image-popup" class="book-details-popup">
-        <h3>Upstate New York</h3>
-        <p>Oct. 6th to 9th 2023</p>
-        <p>Contact Alex Dong for more information: <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com</a></p>
-        <p>Workshop content: Fundamental Qigong, Forms, Energy practice and Push Hands</p>
-        <p>
-          <a href="https://docs.google.com/document/d/1ie9UXIEbxr8q8xDss1VitFCwGbr3yaMlVqlYHoZbtPE/edit?usp=sharing">Download Form Here</a>
-        </p>
+
+      <h2>June 1 and 2, 2024</h2>
+
+      <div id="cz" style="display:none" class="image-popup" class="book-details-popup">
+
+        <h3>London, United Kingdom</h3>
+
+        <p>June 1 to 22, 2024</p>
+
+        <p>Contact <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com</a></p>
+
+        <p>Workshop content: Qigong, Forms and Push Hands</p>
+
+
+ <a href="#cz2" class="animated_popup">
+
+        <h1>Copenhagen, Denmark</h1>
+
+      </a>
+
+      <h2>June 4 to 6, 2024</h2>
+
+      <div id="cz2" style="display:none" class="image-popup" class="book-details-popup">
+
+        <h3>Copenhagen, Denmark</h3>
+
+        <p>June 4 to 4, 2024</p>
+
+        <p>Contact <a href="mailto:webmaster@knudtaichi.dk ">webmaster@knudtaichi.dk </a></p>
+
+        <p>Workshop content: Fundamental Qigong, Simplified, Advanced Forms and Energy work</p>
+
       </div>
+
+
+
+<a href="#montreal" class="animated_popup">
+
+        <h1>Dolbeau-Mistassini, Québec/Canada</h1>
+
+      </a>
+
+      <h2>Aug. 2 to 5, 2024</h2>
+
+      <div id="montreal" style="display:none" class="image-popup" class="book-details-popup">
+
+        <h3>Dolbeau-Mistassini, Québec/Canada</h3>
+
+        <p>Aug. 2 to 5, 2024</p>
+
+        <p>Contact <a href="mailto:guylaine@planeterres.com">guylaine@planeterres.com</a></p>
+
+        <p>Workshop content: Fundamental Qigong, Forms, Energy and Weapons</p>
+
+      </div>
+
+
+      <a href="#abcde" class="animated_popup">
+
+        <h1>Olympia, Washington</h1>
+
+      </a>
+
+      <h2>August 16 to 18, 2024</h2>
+
+      <div id="abcde" style="display:none" class="image-popup" class="book-details-popup">
+
+        <h3>Olympia, Washington</h3>
+
+        <p>August 16 to 18, 2024</p>
+
+        <p>Contact <a href="mailto:dmh1224@gmail.com">dmh1224@gmail.com</a></p>
+
+        <p>Workshop content: Qigong, Forms and Weapons practice</p>
+
+        <p>$60 per class--$50 pre-register</p>
+
+        <p>$250 for all five classes--$220 pre-register</p>
+
+        <p>Pre-register by August 1 2024 with a minimum of 50% deposit. </p>
+
+        <p>Contact <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com</a> for payment details</p>
+
+      </div>
+
+
+
+
+<a href="#Newham" class="animated_popup">
+
+        <h1>New Hampshire</h1>
+
+      </a>
+
+      <h2>Sept. 20th to 22nd 2024</h2>
+
+      <div id="Newham" style="display:none" class="image-popup" class="book-details-popup">
+
+        <h3>New Hampshire</h3>
+
+        <p>Sept. 20th to 22 2024</p>
+
+        <p>Contact Alex Dong for more information: <a href="mailto:janetbriggs79@gmail.com">janetbriggs79@gmail.com</a></p>
+
+        <p>Workshop content: Fundamental Qigong, Forms, Energy practice and Push Hands</p>
+
+      </div>
+
+
+
+  <a href="#upstate" class="animated_popup">
+
+        <h1>Upstate New York</h1>
+
+      </a>
+
+      <h2>Oct. 3rd to 6th 2024</h2>
+
+      <div id="upstate" style="display:none" class="image-popup" class="book-details-popup">
+
+        <h3>Upstate New York</h3>
+
+        <p>Oct. 3rd to 6th 2024</p>
+
+        <p>Contact Alex Dong for more information: <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com</a></p>
+
+        <p>Workshop content: Fundamental Qigong, Forms, Energy practice and Push Hands</p>
+
+      </div>
+
 
       <a href="#cz7" class="animated_popup">
+
         <h1>Athens, Greece</h1>
+
       </a>
-      <h2>Nov. 2 to 5, 2023</h2>
+
+      <h2>Oct. 31 to Nov. 3, 2024</h2>
+
       <div id="cz7" style="display:none" class="image-popup" class="book-details-popup">
+
         <h3>Athens, Greece</h3>
-        <p>Nov. 2 to 5, 2023</p>
+
+        <p>Oct. 31 to Nov. 3, 2024</p>
+
         <p>Contact <a href="mailto:lydiatilli@hotmail.com">lydiatilli@hotmail.com</a></p>
-        <p>Workshop content: Fundamental Qigong, All Forms and Push Hands</p>
-      </div>
-      
-      <a href="#france2023" class="animated_popup">
-        <h1>Grenoble, France</h1>
-      </a>
-      <h2>Nov. 17 to 19, 2023</h2>
-      <div id="france2023" style="display:none" class="image-popup" class="book-details-popup">
-        <h3>Grenoble, France</h3>
-        <p>Nov. 17 to 19, 2023</p>
-        <p>Contact <a href="mailto:ewitrant@gmail.com">ewitrant@gmail.com</a></p>
-        <p>Workshop content: Fundamental Qigong, All Forms and Push Hands</p>
-      </div>
 
-      <a href="#cz9" class="animated_popup">
-        <h1>Belo Horizonte, Brazil</h1>
-      </a>
-      <h2>December 8 to 10, 2023</h2>
-      <div id="cz9" style="display:none" class="image-popup" class="book-details-popup">
-        <h3>Belo Horizonte, Brazil</h3>
-        <p>December 8 to 10, 2023</p>
-        <p>Contact <a href="mailto:taichichuanbh@gmail.com">taichichuanbh@gmail.com</a></p>
-        <p>Workshop content: Qigong, Forms and Push Hands</p>
-      </div>
+        <p>Workshop content: Fundamental Qigong, All Forms and Push Hands</p>
 
-      <a href="#cz8" class="animated_popup">
-        <h1>Austin, Texas</h1>
-      </a>
-      <h2>December 1 to 3, 2023</h2>
-      <div id="cz8" style="display:none" class="image-popup" class="book-details-popup">
-        <h3>Austin, Texas</h3>
-        <p>December 1 to 3, 2023</p>
-        <p>Contact <a href="mailto:miss.llenna@gmail.com">miss.llenna@gmail.com</a></p>
-        <p>Workshop content: Qigong, Beginning Fast Form and Push Hands</p>
       </div>
       
     </div>
