--- a/workshops/index.html
+++ b/workshops/index.html
@@ -96,7 +96,25 @@
 
       </div>
 
+<a href="#aaaa" class="animated_popup">
 
+        <h1>Boise, Idaho</h1>
+
+      </a>
+
+      <h2>June 21 to 23, 2024</h2>
+
+      <div id="aaaa" style="display:none" class="image-popup" class="book-details-popup">
+
+        <h3>Boise, Idaho</h3>
+
+        <p>June 21 to 23, 2024</p>
+
+        <p>Contact <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com</a></p>
+
+        <p>Workshop content: Fundamental Qigong, Simplified, Advanced Forms and Energy work</p>
+
+      </div>
 
 <a href="#montreal" class="animated_popup">
 
