--- a/workshops/index.html
+++ b/workshops/index.html
@@ -34,88 +34,6 @@
   <section class="history workshops link-container">
     <div class="history-container">
 
-<a href="#cz4" class="animated_popup">
-
-        <h1>Siena, Italy</h1>
-
-      </a>
-
-      <h2>May 18 to 21, 2024</h2>
-
-      <div id="cz4" style="display:none" class="image-popup" class="book-details-popup">
-
-        <h3>Siena, Italy</h3>
-
-        <p>May 18 to 21, 2024</p>
-
-        <p>Contact <a href="mailto:claudio.dongtaichi@gmail.com">claudio.dongtaichi@gmail.com</a></p>
-
-        <p>Workshop content: Fundamental Qigong, Forms, Energy and Push Hands</p>
-
-      </div>
-
-
- <a href="#cz" class="animated_popup">
-
-        <h1>London, United Kingdom</h1>
-
-      </a>
-
-      <h2>June 1 and 2, 2024</h2>
-
-      <div id="cz" style="display:none" class="image-popup" class="book-details-popup">
-
-        <h3>London, United Kingdom</h3>
-
-        <p>June 1 to 22, 2024</p>
-
-        <p>Contact <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com</a></p>
-
-        <p>Workshop content: Qigong, Forms and Push Hands</p>
-
-      </div>
-
-
- <a href="#cz2" class="animated_popup">
-
-        <h1>Copenhagen, Denmark</h1>
-
-      </a>
-
-      <h2>June 4 to 6, 2024</h2>
-
-      <div id="cz2" style="display:none" class="image-popup" class="book-details-popup">
-
-        <h3>Copenhagen, Denmark</h3>
-
-        <p>June 4 to 4, 2024</p>
-
-        <p>Contact <a href="mailto:webmaster@knudtaichi.dk ">webmaster@knudtaichi.dk </a></p>
-
-        <p>Workshop content: Fundamental Qigong, Simplified, Advanced Forms and Energy work</p>
-
-      </div>
-
-<a href="#aaaa" class="animated_popup">
-
-        <h1>Boise, Idaho</h1>
-
-      </a>
-
-      <h2>June 21 to 23, 2024</h2>
-
-      <div id="aaaa" style="display:none" class="image-popup" class="book-details-popup">
-
-        <h3>Boise, Idaho</h3>
-
-        <p>June 21 to 23, 2024</p>
-
-        <p>Contact <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com</a></p>
-
-        <p>Workshop content: Fundamental Qigong, Simplified, Advanced Forms and Energy work</p>
-
-      </div>
-
 <a href="#montreal" class="animated_popup">
 
         <h1>Dolbeau-Mistassini, Québec/Canada</h1>
@@ -228,6 +146,114 @@
         <p>Contact <a href="mailto:lydiatilli@hotmail.com">lydiatilli@hotmail.com</a></p>
 
         <p>Workshop content: Fundamental Qigong, All Forms and Push Hands</p>
+
+      </div>
+
+      <a href="#Grenoble" class="animated_popup">
+
+        <h1>Grenoble, France</h1>
+
+      </a>
+
+      <h2>December 6 to 8, 2024</h2>
+
+      <div id="Grenoble" style="display:none" class="image-popup" class="book-details-popup">
+
+        <h3>Grenoble, France</h3>
+
+        <p>April 22 to 23, 2023</p>
+
+        <p>Contact <a href="mailto:ewitrant@gmail.com">ewitrant@gmail.com</a></p>
+
+        <p>Workshop content: Qigong, Forms, Pole and Push Hands</p>
+
+      </div>
+
+
+
+       <a href="#Austin" class="animated_popup">
+
+        <h1>Austin, Texas</h1>
+
+      </a>
+
+      <h2>Dec. 13th to 15th 2024</h2>
+
+      <div id="Austin" style="display:none" class="image-popup" class="book-details-popup">
+
+        <h3>Austin, Texas</h3>
+
+        <p>Dec. 13th to 15th 2024</p>
+
+        <p>Contact Alex Dong for more information: <a href="mailtomiss.llenna@gmail.com:">miss.llenna@gmail.com</a></p>
+
+        <p>Workshop content: Fundamental Qigong, Forms, Saber, Energy practice and Push Hands</p>
+
+      </div>
+
+
+
+      <a href="#TaiChiCruise" class="animated_popup">
+
+        <h1>LA to Mexico</h1>
+
+      </a>
+
+      <h2>Feb. 15 to 22, 2025</h2>
+
+      <div id="TaiChiCruise" style="display:none" class="image-popup" class="book-details-popup">
+
+        <h3>LA to Mexico</h3>
+
+        <p>Feb. 15th to 22, 2025</p>
+
+        <p>Contact <a href="mailto:taichitoni1@hotmail.com ">taichitoni1@hotmail.com </a></p>
+
+        <p>Workshop content: Fundamental Qigong, Forms, Principles and Push Hands</p>
+
+      </div>
+
+
+
+
+      <a href="#copen2025" class="animated_popup">
+
+        <h1>Copenhagen, Denmark</h1>
+
+      </a>
+
+      <h2>June 4 to 6, 2025</h2>
+
+      <div id="copen2025" style="display:none" class="image-popup" class="book-details-popup">
+
+        <h3>Copenhagen, Denmark</h3>
+
+        <p>June 4 to 6, 2025</p>
+
+        <p>Contact <a href="mailto:webmaster@knudtaichi.dk ">webmaster@knudtaichi.dk </a></p>
+
+        <p>Workshop content: Fundamental Qigong, Simplified, Advanced Forms and Energy work</p>
+
+      </div>
+
+
+     <a href="resort" class="animated_popup">
+
+        <h1>Resort, Greece</h1>
+
+      </a>
+
+      <h2>Sept. 19 to 25, 2025</h2>
+
+      <div id="resort" style="display:none" class="image-popup" class="book-details-popup">
+
+        <h3>Resort, Greece</h3>
+
+        <p>Sept. 19 to 25, 2023</p>
+
+        <p>Contact <a href="mailto:lydiatilli@hotmail.com">lydiatilli@hotmail.com</a></p>
+
+        <p>Workshop content: Qigongs, All Forms, Applications and Push Hands</p>
 
       </div>
       
