--- a/workshops/index.html
+++ b/workshops/index.html
@@ -126,6 +126,8 @@
 
         <p>Workshop content: Fundamental Qigong, Forms, Energy practice and Push Hands</p>
 
+        <p><a href="Rosendale2024.docx">Download form here</a></p>
+
       </div>
 
 
@@ -237,7 +239,7 @@
       </div>
 
 
-     <a href="resort" class="animated_popup">
+     <a href="#resort" class="animated_popup">
 
         <h1>Resort, Greece</h1>
 
