--- a/workshops/index.html
+++ b/workshops/index.html
@@ -187,7 +187,7 @@
 
         <p>Dec. 13th to 15th 2024</p>
 
-        <p>Contact Alex Dong for more information: <a href="mailtomiss.llenna@gmail.com:">miss.llenna@gmail.com</a></p>
+        <p>Contact Alex Dong for more information: <a href="mailto:miss.llenna@gmail.com:">miss.llenna@gmail.com</a></p>
 
         <p>Workshop content: Fundamental Qigong, Forms, Saber, Energy practice and Push Hands</p>
 
@@ -209,7 +209,7 @@
 
         <p>Feb. 15th to 22, 2025</p>
 
-        <p>Contact <a href="mailto:taichitoni1@hotmail.com ">taichitoni1@hotmail.com </a></p>
+        <p>Contact <a href="mailto:taichitoni1@hotmail.com">taichitoni1@hotmail.com </a></p>
 
         <p>Workshop content: Fundamental Qigong, Forms, Principles and Push Hands</p>
 
