Updated instructors information

--- a/classes/athens/index.html
+++ b/classes/athens/index.html
@@ -48,7 +48,7 @@
       </div>
       <p>Nea Smyrni Tai Chi Chuan Association
       <br>Location: Plastira 62, Nea Smyrni, Athens
-      <br>Phone: 00302109359712 or Email: <a href="mailto:lydiatilli@hotmail.com">lydiatilli@hotmail.com</a>
+      <br>Phone: 00302109359712 or Email: <a href="mailto:taichilydia@gmail.com ">taichilydia@gmail.com </a>
       <br>Website: <a href="http://www.taichi.gr" target="_blank">www.taichi.gr</a>
       </p>
     </div>
@@ -61,8 +61,8 @@
         <p>Yiannis Zoumproulis was born in Athens and started training in Chinese martial arts in 1992. During his training he has practiced Wudang Taijiquan, Eagle Claw Kung Fu and Yang style Taijiquan. He started his training with Master Alex Dong in 2002. Since then, he has travelled to attend workshops and has taught his own classes in Athens since 2006. He is also active in organizing Alex's workshops in Greece as well as other workshops and events for the Nea Smyrni Taijiquan Association. He is dedicated to continuing his Taijiquan studies with Master Alex Dong and is the founder of the Athens Taijiquan Association.</p>
       </div>
       <p>Athens Tai Chi Chuan Association
-      <br>Address: Neo Iraklio - Selinis 23 - Athens
-      <br>Phone: 00302107648126 or Email: <a href="mailto:taichiathens@gmail.com">taichiathens@gmail.com</a>
+      <br>Address: NKaraoli 91-93, Nea Ionia - Athens
+      <br>Phone: 0030 6946993501 or Email: <a href="mailto:taichiathens@gmail.com">taichiathens@gmail.com</a>
       <br>Website: <a href="http://www.taichiathens.gr" target="_blank">www.taichiathens.gr</a></p>
     </div>
 
@@ -76,14 +76,14 @@
     <div class="history-container classes-container instructor-container">
       <h1>Instructor: Argyris Tsepelikas</h1></a>
       <p>Exarchia, Athens Greece</p>
-      <p>Tel. 6987337384
+      <p>Phone: 6987337384
         <br>Website: <a href="www.taichiqigong.gr">www.taichiqigong.gr</a>
         <br>fb: @taichiexarchia 
       </p>
     </div>
 
     <div class="history-container classes-container instructor-container">
-      <h1>thens-Certified Instructor Mixalis Kiminas.</h1>
+      <h1>Athens-Certified Instructor Mixalis Kiminas.</h1>
       <p>Koukaki Tai Chi Association.</p>
       <p>Email: info@yinyang-taichi.gr.</p>
       <p>kiminas193@gmail.com.</p>
