--- a/classes/copenhagen/index.html
+++ b/classes/copenhagen/index.html
@@ -32,12 +32,35 @@
 
 <section class="history-classes">
   <div class="history-container classes-container link-container">
-    <h1>Senior Instructor Knud Erik Anderson</h1>
+    <h1 style="color:rgb(132, 37, 37);">Senior Instructor Knud Erik Anderson</h1>
+    <p>Copenhagen - Broendby with Knud Erik Andersen.
+    <br>Knud has been styding since 1984, and teaching since 1990.</p>
+<p><b>Instructions</b></p>
+  <p>Traditional Yang Style Tai Chi Chuan as taught by the Dong (Tung) family including Long Form; weapons; qigong; applications; push hands etc.</p>
+<p><b>Schedule</b></p>
+<p>Classes all Year round.
+<br>Indoor from mid August to end June.
+<br>Outdoor from beginning June to mid August.
+<br>Wednesday and Friday 5 PM - 8:30 PM.</p>
+<p><b>Contact</b></p>
+    <p>Knud Erik Andersen
+    <br>Phone: 0045 25599228
+    <br>Website: <a href="http://www.knudtaichi.dk">www.knudtaichi.dk</a>
+    <br>FB: <a href="https://www.facebook.com/Taichiknud">https://www.facebook.com/Taichiknud</a>
+    <br>Email: <a href="mailto:webmaster@knudtaichi.dk">webmaster@knudtaichi.dk</a>
+  </p>
+  <p></p>
+  <p></p>
 
-    <p>Email: webmaster@knudtaichi.dk</p>
-    <p>Phone: +45 25599228</p>
-    <p><a href="http://www.knudtaichi.dk">www.knudtaichi.dk</a></p>
+   <h1 style="color:rgb(132, 37, 37);">Instructor: Lis Værgman (or Lis Vaergman)</h1>
 
+<p>Classes in central Copenhagen. All levels.</p>
+<p><b>Contact</b></p>
+    <p>Phone: +45 26 71 42 06
+    <br>Website: <a href="https://www.taichi-wujigong.dk">www.taichi-wujigong.dk</a>
+    <br>Email: <a href="mailto:Liv@abmerkur.dk">Liv@abmerkur.dk</a>
+  </p>
+  </div>
 </section>
 
 <footer>
