--- a/classes/crete/index.html
+++ b/classes/crete/index.html
@@ -48,14 +48,20 @@
 
 
 	<p><a href="http://www.intheflow.gr/tai-chi-and-qi-gong.html">Local website</a></p>
-      <p>Contact: <a href="mailto:xkloni@yahoo.com">xkloni@yahoo.com</a></p>
+      <p><b>Contact:</b> <a href="mailto:xkloni@yahoo.com">xkloni@yahoo.com</a></p>
 
     </div>
+
+    <div class="history-container classes-container instructor-container">
+      <h1 style="color:rgb(132, 37, 37);">Instructor: Eleni Koutala</h1>
+      <p>Tai Chi Chuan "FLOW"</br>
+        <br>Address: Stergioganni 1 Heraclion Creta
+        <br>Phone: 6944457338
+        <br>Email: <a href="mailto:koutalae@uoc.gr">koutalae@uoc.gr</a>
+      </p>
+    </div>
+   
   </section>
-
-
-
-
 
   <footer>
     <nav class="footer-homepage">
