--- a/classes/florida/index.html
+++ b/classes/florida/index.html
@@ -16,7 +16,7 @@
   <header class="header-classes">
     <nav class="nav-homepage">
       <ul class="nav-ul-homepage">
-        <li><a href="http://alexdongtaichi.com">Home</a></a></li>
+        <li><a href="http://alexdongtaichi.com">Home</a></li>
         <li><a target="_blank" href="http://blog.alexdongtaichi.com">Blog</a></li>
         <li><a href="../../classes/">Classes</a></li>
         <li><a href="../../legacy/">Legacy</a></li>
@@ -27,55 +27,23 @@
   </header>
 
   <div class="header-background">
-    <h1>Syracuse, New York</h1>
+    <h1>Florida, United States</h1>
   </div>
 
   <section class="history-classes">
-    <div class="history-container classes-container">
-      <a href="#tonidemoulin-popup" class="animated_popup"><h1>Senior Instructor: Brian Martens</h1></a>
-        <div id="tonidemoulin-popup" class="image-popup" style="display:none">
-          <img src="../../assets/images/instructor/brianmartens.jpg">
-          <h3>Senior Instructor Brian Martens</h3>
-          <p>Brian is a Professor in the Psychology Department and an Adjunct Professor in the Exercise Science Department at Syracuse University. He began studying taijiquan in 1980 with senior students of Master Tung Kai Ying. In 2009, Brian attended his first weekend intensive retreat with Master Alex Dong, and was impressed by the openness and clarity of his teaching style. Brian has been attending Sunday workshops in New York City and weekend intensive retreats with Master Dong ever since. Taijiquan really is the "grand ultimate" martial art, and regular practice of taiji can enrich all aspects of our lives. Brian is honored to be a student of Master Dong and to help promote this wonderful art.</p>
-        </div>
-
-        <p>The Wellness Center at HOA of CNY
-          <br> 5490 Cobbler Way
-          <br>Camillus, NY 13031</p>
-          <p>Intermediate/advanced classes and monthly workshops.
-          <br>Private lessons available by request.</p>
-          
-          <div class="history-container classes-container instructor-container">
-            <h1 style="color:rgb(132, 37, 37);">Instructor: David DeLuca</h1>
-              <p>The Wellness Center at HOA of CNY
-              <br> 5490 Cobbler Way
-              <br>Camillus, NY 13031</p>
-              <p>Beginner's classes and Qi-Gong.</p>
-          </div>
-
-          <div class="history-container classes-container instructor-container">
-            <h1 style="color:rgb(132, 37, 37);">Instructor: Timothy King</h1>
-            <p>913 Old Liverpool Rd., Suite C
-            <br>Liverpool, NY 13088</p>
-            <p>Beginner's classes and Qi-Gong.</p>
-          </div>
-
-        <p>For more information about the <strong>Dong Style</strong> Taijiquan School of Syracuse, the <strong>Dong Ying Jie
-          Taiji Legacy</strong>, and classes offered by the instructors please visit:</p>
-          <p><a href="https://www.taijisyracuse.com">www.taijisyracuse.com</a></p>
-          <p>or contact:
-          <br>Brian: <a href="mailto:brianmartens11@gmail.com">brianmartens11@gmail.com</a>
-          <br>David: <a href="mailto:davedeluca11@gmail.com">davedeluca11@gmail.com</a>
-          <br>Tim: <a href="mailto:timking108@yahoo.com">timking108@yahoo.com</a>
-        </p>
-        </p>
-    </div>
-  </section>
-
+    <div class="history-container classes-container instructor-container">
+   <h1 style="color:rgb(132, 37, 37);">Jason Eaton</h1>
+   <p>
+    <br>Website: <a href="https:/www.AtomicTaiChi.com">www.AtomicTaiChi.com.com</a>
+    <br>Email: <a href="mailto:jason@atomictaiji.com">jason@atomictaiji.com</a>
+    <br>Location: Palm Bay, FL
+  </p>
+  </div>
+  
   <footer>
     <nav class="footer-homepage">
       <ul class="footer-ul-homepage">
-        <li><a href="http://alexdongtaichi.com">Home</a></a></li>
+        <li><a href="http://alexdongtaichi.com">Home</a></li>
         <li><a target="_blank" href="http://blog.alexdongtaichi.com">Blog</a></li>
         <li><a href="../../classes/">Classes</a></li>
         <li><a href="../../legacy/">Legacy</a></li>
