--- a/classes/longisland/index.html
+++ b/classes/longisland/index.html
@@ -32,7 +32,7 @@
 
   <section class="history-classes">
     <div class="history-container classes-container">
-      <a href="#jeffpastoressa-popup" class="animated_popup"><h1>Instructor: Jeff Pastoressa</h1></a>
+      <a href="#jeffpastoressa-popup" class="animated_popup"><h1>Master Instructor: Jeff Pastoressa</h1></a>
         <div id="jeffpastoressa-popup" class="image-popup" style="display:none">
           <img src="../../assets/images/instructor/jeffpastoressa.jpg">
           <h3>Jeff Pastoressa</h3>
@@ -67,7 +67,20 @@
         energy.</p>
       <p>Sword and Stick Forms</p>
       <p>Tai Chi for Self-Defense</p>
+      <p></p>
     </div>
+
+  <div class="history-container classes-container">
+    <h1 style="color:rgb(132, 37, 37);">Instructor: Tim TenClay</h1></a>
+    <p>Private or small group instruction in Qigong and Tai Chi (Dong Simplified Form)</p>
+    <p><b>Contact</b>
+      <br>Toni DeMoulin
+        <br>Voice/txt/Whatsapp: 516-710-2406
+        <br>Website: <a href="https:/www.timtenclay.com">www.timtenclay.com</a>
+        <br>Location: Manhasset, NY (Long Island)
+      </p>
+  </div>    
+
   </section>
 
   <footer>
