--- a/classes/olympia/index.html
+++ b/classes/olympia/index.html
@@ -40,16 +40,15 @@
     
     <div class="history-container classes-container instructor-container">
       <h1>Instructor: Terry Johnson</h1></a>
-      <p>Contact: <a href="mailto:wildcats31@earthlink.net">wildcats31@earthlink.net</a></p>
+      <p>Contact<a href="mailto:wildcats31@earthlink.net">wildcats31@earthlink.net</a></p>
     </div>
 
     <div class="history-container classes-container instructor-container">
-      <h1>Instructor: Barbara Helynn Heard</h1>
+      <h1>Instructor: Barbara Helynn Robles</h1>
+      <p>Classes are online via zoom</p>
       <p>
-        <a href="https://www.lomilomi-massage.org/Taiji-Classes.html">https://www.lomilomi-massage.org/Taiji-Classes.html</a>
-      <p>
-      <p>
-        <a href="mailto:barbaraheard@msn.com  ">barbaraheard@msn.com  </a>
+        Website: <a href="https://www.lomilomi-massage.org/Taiji-Classes.html">https://www.lomilomi-massage.org/Taiji-Classes.html</a>
+      <br>Email: <a href="mailto:barbaraheard@msn.com">barbaraheard@msn.com</a>
       </p>
     </div>
 
