--- a/classes/quebec/index.html
+++ b/classes/quebec/index.html
@@ -63,12 +63,7 @@
       <p>Loisirs Renaud/Coursol
         <br>Centre communautaire St-Louis
         <br>25 St-Louis Street
-        <br>Laval, Québec, H7G 4W3
-        <br>Monday
-        <br>Beginner-Intermediate : 12:30 to 13:45
-        <br>Advanced : 13:45 to 15:00
-        <br>Tuesday
-        <br>Beginner : 18:30 to 19:45</p>
+        <br>Laval, Québec, H7G 4W3</p>
     </div>
 
     <div class="history-container classes-container instructor-container">
@@ -76,29 +71,42 @@
         <div id="philipped-popup" class="image-popup" style="display:none">
           <img src="../../assets/images/instructor/philippe.jpg">
           <h3>Philippe Daviet</h3>
-          <p>Philippe has gravitated around various martial arts during a large
-          part of his life. His interest in Taiji started in 2001 after having
-          sustained injuries from his other martial activities. He has been
-          attending Master Dong’s workshops since 2010.
+          <p>Philippe has been practising Tai Chi since 2000 and teaching it since
+            2012. Formerly into other martial arts (Kendo, Judo). Classes combine
+            various elements to provide practitioners the opportunity to develop
+            the many facets that Tai Chi offers. An open approach caters to a wide
+            range of students with varying objectives. Offered in French and
+            English.
           </p>
-          <p>
-          Both the martial intent and the Taoist philosophy have an equal footing
-          during his classes to respect Taijiquan’s origins.
-          </p>
-          <p>
-          Philippe began instruction in 2013 in the city of Magog, Canada.
-          <p>Call: 819-574-4203 or Email: 
-          <a href="mailto:TaiChi.Magog@gmail.com" target="_blank">TaiChi.Magog@gmail.com</a></p>
-        </div>
-
+          <p>FB: 
+            <a href="https://www.facebook.com/ClubTaichiMagog" target="_blank">https://www.facebook.com/ClubTaichiMagog</a>
+            <br>Email: 
+              <a href="mailto:Philippe.Daviet@gmail.com" target="_blank">Philippe.Daviet@gmail.com</a></p>
+              </div>
     <p>
-        Tuesdays 6:00pm - 9:00pm</br>
-         <a href="http://www.ccchl.ca/"  target="_blank"> Centre Culturel et Communautaire Henri-Lemieux</a></br>
-        7644, rue Édouard, LaSalle, Canada, H8P 1T3</br>
-        Tel: 514.367.5000</br>
-        Fax: 514.367.4471</p>
+        <b>Classes</b></br>
+        <br><a href="http://www.ccchl.ca/"  target="_blank"> Centre Culturel et Communautaire Henri-Lemieux</a></br>
+        7644, rue Édouard, LaSalle, Canada, H8P 1T3
+        <br>Tel: 514.367.5000</br>
+        <br>Classes Monday and Tuesday evenings
+        <br>Emphasis is on the Slow set with some Qi Gong and Push hands
+        <br>A rotation of other forms (Fast, Hao, Fajin, Knife, Sword or Sticks)
+        <br>depending on interest
+    </p>
+    <p>
+      <a href="https://eastman.quebec/loisirs-et-culture/activites/loisirs-intermunicipaux/"  target="_blank">Ville de Eastman</a>
+      <br>Tel : 450-297-3440</br>
+      <br>Classes on Thursday evening
+      <br>Emphasis is on the Slow set with some Qi Gong and Push hands
+    </p>
     </div>
 
+    <div class="history-container classes-container instructor-container">
+      <h1 style="color:rgb(132, 37, 37);">Instructor: Guylaine Mireault</h1>
+        <p>Website: <a href="https://taichilaval.com/">taichilaval.com</a>
+  </p>
+     </div>
+ 
   </section>
 
   <footer>
