--- a/classes/index.html
+++ b/classes/index.html
@@ -46,6 +46,7 @@
         <li><a href="newyorkcity/">New York City and the greater Northeast</a></li>
         <li><a href="carmel/">Carmel, California</a></li>
         <li><a href="coloradoutah/">Colorado And Utah Borders</a></li>
+        <li><a href="florida/">Palm Bay, Florida</a></li>
         <li><a href="oahu/">Honolulu, Hawaii</a></li>
         <li><a href="longisland/">Long Island, New York</a></li>
         <li><a href="syracuse/">Syracuse, New York</a></li>
