--- a/classes/santabarbara/index.html
+++ b/classes/santabarbara/index.html
@@ -32,7 +32,7 @@
 
   <section class="history-classes">
     <div class="history-container classes-container">
-      <a href="#tonidemoulin-popup" class="animated_popup"><h1>Instructor: Toni Demoulin</h1></a>
+      <a href="#tonidemoulin-popup" class="animated_popup"><h1>Master Instructor: Toni DeMoulin</h1></a>
         <div id="tonidemoulin-popup" class="image-popup" style="display:none">
           <img src="../../assets/images/instructor/tonidemoulin.jpg">
           <h3>Toni Demoulin</h3>
@@ -40,19 +40,30 @@
 
           <p>Toni started Dong Style Taiji academies in Santa Barbara, San Diego and Portland, OR. and has given USA workshops in Burbank, Whittier, Big Bear, Eureka, Seattle, and Portland. European workshops have been in Tonsberg, Norway and Prague, Czech Republic. Toni encourages other students by example to be a good senior student, helping others on this path and attending as many workshops, camps and intensives as possible with Master Alex.</p>
         </div>
-      <p>Santa Barbara Tai Chi with Toni DeMoulin, 42 years teaching experience</p>
-      <p><strong>Instruction:</strong> traditional Yang taijiquan long form, Qi Gong, Hao & Dong (Tung) style
-      taijiquan, weapons, applications, conflict resolution & Push Hands
-      <br>9:30 AM Wednesdays and Sundays</p>
-      <p><strong>Location:</strong> Oak Park stage- outside in filtered shade on a wooden deck</p>
-      <p><strong>Monthly Fees:</strong>
-      <br>Santa Barbara City Resident Fee $70
-      <br>Non-Resident Fee $77
-      <br>Drop-In Fee $20
-      <br>Register and pay (cash, check or credit card) on or before the first day of each month.
-      Make checks payable to City of Santa Barbara</p>
-      <p><strong>Contact:</strong> Toni DeMoulin
-      <br>Phone: 805-636-1888 or Email: <a href="mailto:taichitoni@gmail.com">taichitoni@gmail.com</a></p>
+
+        <p><b>Santa Barbara Tai Chi & Qigong</b></p>
+        <p>Toni DeMoulin has 53 years of experience teaching Dong Style Taijiquan.
+<br>Studied 30 years with Master Tung Kai Ying and 23 years with Master Alex Dong.
+<br>She has taught students in many European and US cities as well as teaching Chinese students for 3 years while  living in Beijing. 
+<br>Toni continues to study Dong Style Taijiquan through Master Alex Dong's worldwide workshops and weekly zoom classes.
+
+<p>All Santa Barbara (California) classes are outside on a wooden deck
+<br>in beautiful Oak Park (Juniper and Calle Real)
+<br>Beginning level students are welcome. 
+<br>There are morning and evening classes available.
+<br>Please email or text for class times and skill levels for each class.
+<br>
+<br>Weekly tuition
+<br>One class per week $25 
+<br>Two or more classes in the same week, tuition is $35. 
+
+<p>Master Alex Dong has a Santa Barbara 2.5 day workshop on the first weekend of May each year.
+<br>All are welcome.
+</p>
+  <p><b>Contact</b>
+    <br>Toni DeMoulin
+      <br>Phone: 805-570-6194
+      <br>Email: <a href="mailto:taichitoni@gmail.com">taichitoni@gmail.com</a></p>
     </div>
   </section>
 
