--- a/classes/olympia/index.html
+++ b/classes/olympia/index.html
@@ -33,24 +33,31 @@
   <section class="history-classes link-container">
     
       <div class="history-container classes-container instructor-container">
-        <h1>Instructor: Andy Holmes</h1> 
+        <h1 style="color:rgb(132, 37, 37);">Senior Instructor: Andy Holmes</h1>
             <p><a href="http://andyholmes.us/Schedule.html" target="_blank">Full Class Schedule</a>
             <br/>Email: <a href="mailto:slowset@gmail.com">slowset@gmail.com</a></p>
       </div>
     
     <div class="history-container classes-container instructor-container">
-      <h1>Instructor: Terry Johnson</h1></a>
-      <p>Contact<a href="mailto:wildcats31@earthlink.net">wildcats31@earthlink.net</a></p>
+      <h1 style="color:rgb(132, 37, 37);">Instructor: Terry Johnson</h1>
+      <p>Contact: <a href="mailto:wildcats31@earthlink.net">wildcats31@earthlink.net</a></p>
     </div>
 
     <div class="history-container classes-container instructor-container">
-      <h1>Instructor: Barbara Helynn Robles</h1>
+      <h1 style="color:rgb(132, 37, 37);">Instructor: Barbara Helynn Robles</h1>
       <p>Classes are online via zoom</p>
       <p>
         Website: <a href="https://www.lomilomi-massage.org/Taiji-Classes.html">https://www.lomilomi-massage.org/Taiji-Classes.html</a>
       <br>Email: <a href="mailto:barbaraheard@msn.com">barbaraheard@msn.com</a>
       </p>
     </div>
+
+    <div class="history-container classes-container instructor-container">
+    <h1 style="color:rgb(132, 37, 37);">Instructor: Maggie Bellinger</h1>
+   <p>Lacy, Washington
+      <br/>Email: <a href="mailto:simplifiedtaichi@gmail.com">simplifiedtaichi@gmail.com</a>
+      </p>
+    </div>    
 
   </section>
 
